test/trivial/bradc/initvarsamename.chpl
var x: int = 2;

for i in 1..4 {
  var x = x + 1;

  writeln("x is: ", x);
}
